# tree-sitter-beancount

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  flake.nix  go.mod  grammar.js  index.js  justfile  package-lock.json  package.json  pyproject.toml  release-please-config.json  setup.py  shell.nix  tmp_meta_case.beancount  tmp_metadata_input.beancount  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  cicd.yml  regenerate.yml  release.yml  security.yml  tree-sitter-compatibility.yml
bindings/c/: tree-sitter-beancount.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_beancount/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs  node_kind.rs  token_kind.rs
bindings/swift/TreeSitterBeancount/: beancount.h
bindings/swift/TreeSitterBeancountTests/: TreeSitterBeancountTests.swift
queries/: README.md  folds.scm  highlights.scm  indents.scm  locals.scm  textobjects.scm
scripts/: generate_token_kind.py
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
test/corpus/: account_names_extended.txt  account_root_names.txt  arithmetic.txt  balance_extended.txt  comment.txt  currencies.txt  currency_extended.txt  date_formats.txt  entry_types.txt  markdown_orgmode.txt  metadata.txt  multi_line.txt  orgmode_sections.txt  parse_lots.txt  parser_include.txt  parser_links.txt  parser_options.txt  parser_plugin.txt  partial_accounts.txt  push_pop_meta.txt  push_pop_tag.txt  transaction.txt  ugly_bugs.txt
