[package]
name = "tree-sitter-beancount"
description = "beancount grammar for the tree-sitter parsing library"
version = "2.3.3" # {x-release-please-version}
keywords = ["incremental", "parsing", "beancount", "tree-sitter"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/polarmutex/tree-sitter-beancount"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.24.4"

[build-dependencies]
cc = "1.2"
